fix crash sending mouse event, add null checks. b=333737 r=hwaara